# omerewriter

./: .editorconfig  CMakeLists.txt  NEWS.md  README.md  RELEASE  autoformat.sh
.github/workflows/: build-test.yml  release.yml
data/: CMakeLists.txt  COPYING-ICONS  io.github.bothlab.omerewriter.desktop  io.github.bothlab.omerewriter.metainfo.xml  screenshot-v0.1.0.avif  win-installer.iss
src/: CMakeLists.txt  cli.cpp  elidedlabel.cpp  elidedlabel.h  imageviewwidget.cpp  imageviewwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  metadatajson.cpp  metadatajson.h  microscopeparamswidget.cpp  microscopeparamswidget.h  microscopeparamswidget.ui  ometiffimage.cpp  ometiffimage.h  ometiffreader.cpp  ometiffreader.h  ometiffwriter.cpp  ometiffwriter.h  ometypes.h  omexml.cpp  omexml.h  resources.qrc  savedparamsmanager.cpp  savedparamsmanager.h  tifffile.cpp  tifffile.h  utils.cpp  utils.h
tests/: example-params.json  multi-channel-4D-series.ome.tiff
tests/ci/: Dockerfile-debian-stable  Dockerfile-debian-testing  Dockerfile-ubuntu-lts  build-and-test.sh  install-deps-deb.sh
tests/samples/: 4D-series.ome.tiff
